# supporter

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  LICENSE  NOTICE  PROJECT_ANALYSIS.md  README.md  package-lock.json  package.json  prek.toml  pyproject.toml  tsconfig.json
.husky/: pre-commit
legacy-ts/: package.json
legacy-ts/.husky/: pre-commit
legacy-ts/src/: agent.ts  index.ts  logger.ts  tui.tsx
legacy-ts/src/providers/: gemini-provider.ts
legacy-ts/src/suppporter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
legacy-ts/tests/: factory.test.ts  load-balancer.test.ts  providers.test.ts  smart-rotation.test.ts  streaming.test.ts
scratch/: inspect-gemini.ts  test-load-balancing.ts
scripts/: g5_order_check.py  live_demonstration.py  update-packages.sh
src/: agent.ts  dump_tree.py  gemini-wrapper.ts  index.ts  test-wrapper.ts  test_tui.py  test_tui2.py
src/providers/: gemini-provider.ts
src/supporter/: __init__.py  agent.py  config.py  crew_adapter.py  crew_agent.py  decision_log.py  gemini_live_provider.py  gemini_provider.py  history_summarizer.py  index.py  keypool.py  lifecycle.py  llm_types.py  logger.py  memory.py  pool.py  prompts.py  recipes.py  recover.py  recovery_metrics.py  replan.py  router.py  session.py  tools.py  tui.py  types.py  verify.py  worker.py
src/supporter/crew/: __init__.py  crew_adapter.py  crew_agent.py
src/supporter/llm/: types.py
src/supporter/providers/: __init__.py  gemini_codec.py  gemini_live_provider.py  gemini_messages.py  gemini_provider.py  openrouter_provider.py  registry.py
src/supporter/tools/: __init__.py  base.py  bash.py  bash_defs.py  capsule.py  capsule_query.py  capsule_view.py  catalog.py  delegate.py  delegation_capsule.py  event_bus.py  file_ops.py  memory_tools.py  planning.py  (+4 more)
tests/: agentic.test.ts  browser_fakes.py  conftest.py  factory.test.ts  fallback.test.ts  load-balancer.test.ts  mocks.py  mocks.ts  providers.test.ts  smart-rotation.test.ts  streaming.test.ts  test_agent_streaming.py  test_agentic.py  test_bash_security.py  test_factory.py  test_fallback.py  test_gemini_provider.py  test_load_balancer.py  test_plan_signals.py  test_providers.py  test_smart_rotation.py  test_streaming.py  tui_mocks.py
tests/contract/: test_gemini_live_sdk_contract.py
tests/e2e/: conftest.py  test_auto_approve.py  test_browser.py  test_browser_core_actions.py  test_browser_files_storage.py  test_browser_frames_advanced.py  test_browser_tabs_eval.py  test_conversation_flow.py  test_file_ops.py  test_recipes.py  test_tui_startup.py
tests/integration/: conftest.py  test_agent_streaming.py  test_agentic.py  test_autonomous_stack.py  test_browser_handlers_coverage.py  test_browser_handlers_files.py  test_browser_handlers_interact.py  test_browser_handlers_lifecycle.py  test_browser_handlers_nav.py  test_browser_handlers_snapshot.py  test_browser_handlers_tabs.py  test_browser_handlers_uncovered.py  test_browser_replay_playbook.py  test_browser_session_fs.py  test_browser_session_lifecycle.py  test_browser_task_persist.py  test_browser_task_uncovered.py  test_browser_tool_uncovered.py  test_crew.py  test_delegation_flow.py  test_factory.py  test_fake_provider.py  test_fallback.py  test_file_ops.py  test_gemini_live_provider.py  test_gemini_provider.py  test_index_advanced.py  test_message_processor.py  test_openrouter_provider.py  test_search.py  test_smart_rotation.py  test_supporter_app.py  test_tool_addition_path.py  test_tui_app.py  test_tui_logic_modes.py  test_tui_logic_processing.py
tests/unit/: test_agent.py  test_agent_context_injection.py  test_auto_approve.py  test_bash.py  test_bash_adversarial.py  test_browser_blocklist.py  test_browser_close_guard.py  test_browser_cloudflare.py  test_browser_debug_overlay.py  test_browser_guardrails.py  test_browser_handlers_overlay.py  test_browser_humanize.py  test_browser_humanize_coverage.py  test_browser_instrumentation.py  test_browser_parallel_pilots.py  test_browser_playbook_match.py  test_browser_profiles.py  test_browser_reader.py  test_browser_recorder.py  test_browser_session.py  test_browser_session_coverage.py  test_browser_session_recovery.py  test_browser_snapshot.py  test_browser_supervisor.py  test_browser_support.py  test_browser_task.py  test_browser_task_memory.py  test_browser_tool_dispatch.py  test_browser_tool_fast.py  test_browser_tool_pure.py  test_bubble_stress.py  test_capsule_corruption.py  test_capsule_render.py  test_config.py  test_config_reload_and_lifecycle.py  test_decision_log.py  test_delegate.py  test_delegate_dag.py  test_delegate_formatting.py  test_delegate_resume.py  (+58 more)
(+60 files in other folders)
