[project]
name = "supporter"
version = "0.1.0"
description = "A TUI-based AI chat client (Python migration)"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.73.1",
    "textual>=8.2.3",
    "python-dotenv>=1.1.1",
    "rich>=14.3.4",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "prek>=0.3.11",
    "mypy>=1.20.2",
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
]

[project.scripts]
supporter = "supporter.tui:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "S",
    "B",
    "C4",
    "ASYNC",
    "PIE",
    "RSE",
    "RET",
    "SIM",
    "T20",
    "RUF",
]
ignore = ["S101", "B019", "T201", "UP043"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    "ignore:.*deprecated.*:DeprecationWarning",
]

[tool.coverage.run]
omit = []

[tool.coverage.report]
fail_under = 85

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true


[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101", "B404", "B108"]
