[project]
name = "supporter"
version = "0.2.0"
description = "A TUI-based AI chat client (Python migration)"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.14"
dependencies = [
    "google-genai>=1.73.1",
    "textual>=8.2.3",
    "python-dotenv>=1.1.1",
    "rich>=14.3.4",
    "patchright>=1.60.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "prek>=0.3.11",
    "mypy>=1.20.2",
    "bandit>=1.9.4",
    "detect-secrets>=1.5.0",
]

[project.scripts]
supporter = "supporter.tui:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "S",
    "B",
    "C4",
    "ASYNC",
    "PIE",
    "RSE",
    "RET",
    "SIM",
    "T20",
    "RUF",
]
ignore = ["S101", "B019", "UP043"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T201"]
"scripts/**" = ["T201"]
"src/supporter/tools/file_ops.py" = ["T201"]
"src/supporter/tools/browser/humanize.py" = ["S311"]
"src/supporter/tools/browser/guardrails.py" = ["S311"]
"src/supporter/tools/browser/session.py" = ["ASYNC110"]
"src/supporter/tools/browser/tool.py" = ["S110"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-m 'not e2e' --cov=src --cov-report=term-missing"
filterwarnings = [
    "ignore:.*deprecated.*:DeprecationWarning",
]

[tool.coverage.run]
omit = []

[tool.coverage.report]
fail_under = 84

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "build/",
    "supporter.egg-info/",
    "dist/",
    "\\.venv/",
]


[tool.bandit]
exclude_dirs = ["tests", ".venv", "scripts"]
skips = ["B101", "B404", "B108", "B311", "B603", "B607", "B110"]
